[gd_scene load_steps=5 format=3 uid="uid://buvlnpexha0yx"]

[ext_resource type="Script" path="res://components/kits/match3/components/pieces/swap_mode/cross_piece.gd" id="1_4cxhj"]
[ext_resource type="Script" path="res://components/interaction/2D/sprites/draggable_sprite_2d.gd" id="2_5oyqi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mvyoo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jvqmw"]

[node name="CrossPiece" type="Node2D"]
script = ExtResource("1_4cxhj")

[node name="DraggableSprite2D" type="Sprite2D" parent="."]
script = ExtResource("2_5oyqi")
smooth_factor = 15.0

[node name="DetectionArea" type="Area2D" parent="DraggableSprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DraggableSprite2D/DetectionArea"]
shape = SubResource("RectangleShape2D_mvyoo")

[node name="PieceArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PieceArea"]
shape = SubResource("RectangleShape2D_jvqmw")
